1998-04-14  Stephan Kulow  <coolo@kde.org>

	* kfiledialogconf.cpp: removed the width/height sliders
	
	* kfiledialog.cpp: save the width and height on exit

	* kfiledialogconf.cpp: added more guys to the about box

	* kfiledialog.h: removed init*Children. They were useless

	* kfiledialog.cpp: set the default size to a useful value

Mon Apr  6 17:30:18 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfilepreview.*: restructured previewing, one can now easily
        use custom previewers, dynamically
        
        * kpreview.*: changes for allowing custom previewers, two previewers
        are hardcoded so far

	* kfiledialog.*: changes changes for allowing custom previewers
        
        * kfstest.cpp: changes to preview mode
        
        * xview.*: QimageIO module allowing the visual-schnauzer generated
        images to be loaded

1998-04-06  Stephan Kulow  <coolo@kde.org>

	* debug.h: added debugC. An empty macro to hide debug output

Thu Apr  2 19:39:37 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kpreview.*: widget which for now shows some info about a 
        file/folder along with the first 20-30 lines of it
        
        * kfilepreview.*: added a new view which has a preview of any text
        file in the right part
        
        * kfstest.cpp: added the new mode "preview" which shows the above 
        view

1998-03-30  Stephan Kulow  <coolo@kde.org>

	* kfilesimpleview.cpp: fixed highlightning

	* kfiledialog.cpp: some fixes for the dir selection

	* kfiledialog.h: Moved KFileDialog into KFileBaseDialog and made
	KFileDialog and KDirDialog a derived class of KFileBaseDialog to
	make this virtual functions work

Mon Mar 30 17:53:20 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

        * kcombiview.cpp: bug fixes for completion & corresponding
        highlighting

        * kfiledialog.cpp: small bug fix, too much copying into location

        * kfileinfocontents.cpp: completion slightly remodeled, should
        work in all views now
