@@ -1,5 +1,5 @@
 
-#if !defined(COOLOS)
+#if defined(COOLOS)
 #define debugC debug
 #else
 inline void debugC(const char *,...) {};
